welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:13: error: value recopier is not a member of Unit
possible cause: maybe a semicolon is missing before `value recopier'?
  }recopier(T)
   ^