welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var X:Int=getMondeLargeur()
  var Y:Int=getMondeHauteur()
  var T= remplir()

  for (i<-0 to Y-2){
    gauche()
    avance()
    droite()
    recopier(T)
    avance()
  }recopier(T)

}



def remplir():Array[Color]={
  var T=new Array[Color](getMondeHauteur())
  for (i<- 0 to getMondeHauteur-1){
    T(i)=getCouleurSol()
    avance()
  }
  return T
}

def recopier(T:Array[Color]){
  for (i<- 0 to T.length-1){
    setCouleurBrosse(T(i))
    avance()
    baisseBrosse()
    leveBrosse()
  }
}